[package]
name = "libdb"
version = "0.1.0"
authors = ["Jesse Morgan <jesse@jesterpm.net>", "Karl Fischer <fishi0x01@gmail.com>"]

license = "Sleepycat"
readme = "README.md"

description = """
statically linked rust bindings for Berkeley DB"
"""
repository = "https://github.com/fishi0x01/libdb-rs"
keywords = ["static-linking", "berkeley-db"]
categories = ["api-bindings"]

[features]
v5_3 = ["libdb-sys/v5_3"]
v4_8 = ["libdb-sys/v4_8"]

[dependencies]
libc = "0.2.67"
bitflags = "1.2.1"
tempdir = "0.3"
libdb-sys = "0.1.0"
